# companion-emergence

./: .env.example  .gitattributes  .gitignore  .graphifyignore  .tauri-release.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  dragonfly.companion.md  guarded-change.companion.md  latest.json  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: marker-scan.yml  release.yml  test.yml
app/: .gitignore  README.md  build_python_runtime.sh  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
app/src/: App.brainLogin.test.tsx  App.test.tsx  App.tsx  PendingWriteCard.test.tsx  appConfig.ts  appConfig.types.test.ts  bridge.attunement.test.ts  bridge.history.test.ts  bridge.kindled.test.ts  bridge.test.ts  bridge.ts  bridgeEvents.test.ts  bridgeEvents.ts  bridgeVersionCheck.test.ts  bridgeVersionCheck.ts  expressions.ts  platform.test.ts  platform.ts  streamChat.idletimer.test.ts  streamChat.keepalive.test.ts  streamChat.timeout.test.ts  streamChat.ts  styles.css  tauri-arg-convention.test.ts  useAnimatedFrame.ts  useSoulFlash.ts  vite-env.d.ts
app/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/python-runtime/: .gitkeep
app/src-tauri/src/: install_shape.rs  launch_log.rs  lib.rs  main.rs
brain/: __init__.py  app_config.py  cli.py  config.py  images.py  paths.py  persona_config.py  pronouns.py  setup.py  tunables.py  user_preferences.py
brain/attunement/: __init__.py  ambient.py  backfill.py  budget.py  crystallise.py  detector.py  feed_source.py  prompts.py  schemas.py  store.py
brain/behavioral/: log.py
brain/body/: events.py  session_hours.py  state.py  words.py
brain/bridge/: __init__.py  chat.py  cli_throttle.py  daemon.py  events.py  feed.py  persisted_cadence.py  persona_state.py  pronoun_nudge.py  provider.py  runner.py  server.py  shutdown.py  state_file.py  supervisor.py  usage_log.py
brain/chat/: __init__.py  budget.py  compaction.py  compaction_migration.py  engine.py  extractor.py  monologue_capture.py  monologue_prompts.py  pass2_queue.py  prompt.py  reflection_gate.py  salience.py  session.py  tool_inventory.py  tool_loop.py  tool_recruit.py  voice.py
brain/creative/: default_creative_dna.json  dna.py
brain/emotion/: __init__.py  _canonical_personal_emotions.py  aggregate.py  arousal.py  blend.py  decay.py  expression.py  influence.py  persona_loader.py  state.py  vocabulary.py
brain/engines/: __init__.py  _interests.py  daemon_state.py  default_interests.json  default_reflex_arcs.json  dream.py  dream_seeds.py  heartbeat.py  interest_sweep.py  reflex.py  research.py  research_ambient.py  research_notes.py  research_session.py
brain/felt_time/: __init__.py  anchors.py  chat_log.py  emotion_intensity.py  lived_age.py  pressure.py  prompt.py  state.py  tool.py  weather_shift.py
brain/files/: audit.py  commit.py  pending.py  write_guard.py
brain/forgetting/: __init__.py  graveyard.py  policy.py  prompt.py  recall.py  salience.py  tombstone.py  tool.py
brain/grief/: __init__.py  breadcrumb.py  policy.py  prompt.py  recall.py
brain/growth/: __init__.py  arc_storage.py  log.py  proposal.py  scheduler.py
brain/health/: __init__.py  adaptive.py  alarm.py  anomaly.py  attempt_heal.py  jsonl_reader.py  log_rotation.py  reconstruct.py  self_model_repair.py  soul_candidate_repair.py  vocab_repair.py  walker.py
brain/ingest/: __init__.py  buffer.py  commit.py  dedupe.py  emotion_backfill.py  extract.py  pipeline.py  soul_queue.py  types.py
brain/initiate/: __init__.py  adaptive.py  ambient.py  audit.py  compose.py  d_call_schema.py  draft.py  emit.py  gate_thresholds.json  gates.py  memory.py  new_sources.py  reach_emotion.py  reflection.py  resonance.py  review.py  schemas.py  tools.py  user_pattern.py  voice_reflection.py
brain/kindled_link/: __init__.py  audit.py  cadence.py  codec.py  connect_code.py  feed_source.py  gate.py  identity.py  limits.py  pairing.py  peer_prompt.py  privacy_gate.py  protocol.py  relationship.py  relay_client.py  self_test.py  session.py  session_engine.py  store.py  tick.py  transport.py  views.py
brain/maker/: __init__.py  ambient.py  budget.py  charge.py  config.py  disclosure.py  maker.py  making_runner.py  persist.py  privacy.py  sources.py  wiring.py
brain/mcp_server/: __init__.py  __main__.py  audit.py  tools.py
brain/memory/: __init__.py  embeddings.py  hebbian.py  search.py  store.py
brain/migrator/: __init__.py  cli.py  companion_emergence.py  (+12 more)
docs/: cli-provider-capabilities.md  maturity-manifest.md  migration-from-og.md  nellface-claude-design-prompt.md  release-checklist.md  roadmap.md  troubleshooting.md
expressions/: README.md
hooks/: allowed-binary-paths.txt  allowed-identities.txt  denied-paths.txt  leak_guard.py  pre-push  test_leak_guard.sh
relay/: __init__.py  dev_relay.py
scripts/: README.md  backfill_soul_for_persona.py  cache_replay_workload.py  clean_shell.sh  dev_bootstrap.sh  dev_build.sh  lint_windows_pitfalls.py  organ_wireback_audit.py  release_preflight.sh  setup_brain_claude_login.sh  smoke_test_wheel.sh  stress_test_image.py  stress_test_voice.py  tdd_guard_scope.sh
tests/: conftest.py
wizard-validation/: .gitignore  RUNBOOK.md  cleanup.sh  launch.sh  launch_real.sh
(+878 files in other folders)
