[project]
name = "companion-emergence"
version = "0.0.11"
description = "Framework for building persistent, emotionally aware AI companions"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Hanamori" },
]
dependencies = [
    "platformdirs>=4.2",
    "numpy>=1.26",
    "ddgs>=6.0",
    "httpx>=0.27",
    "mcp>=1.0.0,<2.0.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
nell = "brain.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain"]

[tool.hatch.build.targets.sdist]
include = [
    "/brain",
    "/tests",
    "/scripts",
    "/README.md",
    "/INSTALL.md",
    "/pyproject.toml",
    "/uv.lock",
]
exclude = [
    "/app/src-tauri/python-runtime",
    "/app/src-tauri/target",
    "/app/node_modules",
    "/dist",
    "/.venv",
    "/bugs",
    "/mock-ups",
    "/.pytest_cache",
    "/.ruff_cache",
    "**/.DS_Store",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
pythonpath = ["."]
markers = [
    "unit: unit tests",
    "integration: integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802"]
