[package]
name = "nellface"
version = "0.0.12"
description = "Companion-emergence desktop client"
authors = ["hana"]
edition = "2021"

[lib]
name = "nellface_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "nellface"
path = "src/main.rs"

[build-dependencies.tauri-build]
version = "2"
features = []

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
