[package]
name = "nellface"
version = "0.0.24"
description = "Companion-emergence desktop client"
authors = ["hana"]
edition = "2021"

[lib]
name = "nellface_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
[[bin]]
name = "nellface"
path = "src/main.rs"

[build-dependencies.tauri-build]
version = "2"

[dependencies]
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
serde_json = "1"
dirs = "5"
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
target = { cfg(unix) = { dependencies = { libc = "0.2" } }, cfg(windows) = { dependencies = { windows = { version = "0.58", features = ["Win32_System_Threading", "Win32_Foundation"] } } } }

[dev-dependencies]
tempfile = "3"
